<resources>
    <string name="app_name">LaunderUp Shop</string>
    <string name="launder_up">Launder Up</string>
    <string name="select_language">Select Language</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="go_to_back_screen">Go to Back Screen</string>
    <string name="proceed">Proceed</string>
    <string name="otp_verification">Verification Code</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="_50_sec"> In 50 Sec</string>
    <string name="shop_details">Shop Details</string>
    <string name="shop_information">Shop Information</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_address">Shop Address</string>
    <string name="contact_number_at_shop">Contact Number at Shop</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="shop_owner_details">Shop Owner Details</string>
    <string name="same_as_shop_mobile_number">Same as Shop Mobile Number</string>
    <string name="shop_owner_email_address">Shop Owner Email Address</string>
    <string name="shop_owner_full_name">Shop Owner Full Name</string>
    <string name="next">Next</string>
    <string name="shop_timings">Shop Timings</string>
    <string name="shop_operational_hours">Shop Operational Hours</string>
    <string name="opens_at">Opens at</string>
    <string name="closes_at">Closes at</string>
    <string name="click_to_choose_open_timing">Click to choose Open Timing</string>
    <string name="click_to_choose_close_timings">Click to Choose Close timings</string>
    <string name="_00_00">00:00</string>
    <string name="mark_open_days">Mark Open Days</string>
    <string name="monday">Monday</string>
    <string name="friday">Friday</string>
    <string name="tuesday">Tuesday</string>
    <string name="saturday">Saturday</string>
    <string name="wednesday">Wednesday</string>
    <string name="sunday">Sunday</string>
    <string name="thursday">Thursday</string>
    <string name="shop_types_and_cloths">Shop Types and Cloths</string>
    <string name="types_of_services_available">Types of Services Available</string>
    <string name="types_of_cloths_available">Types of Cloths Available</string>
    <string name="ironing">Ironing</string>
    <string name="laundry">Laundry</string>
    <string name="washing">Washing</string>
    <string name="express">Express</string>
    <string name="legal_details_documents">Legal Details/Documents</string>
    <string name="is_your_shop_gst_registered">Is your Shop GST registered?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="do_you_charge_5_gst_as_shop_services_on_all_clothes">Do you Charge 5% GST as shop services on all clothes?</string>
    <string name="gst_details">GST Details</string>
    <string name="enter_gst_number">Enter GST Number</string>
    <string name="pan_details">Pan Details</string>
    <string name="enter_pan_number">Enter Pan Number</string>
    <string name="legal_entity_number">Legal Entity Number</string>
    <string name="address_legal_entity">Address Legal Entity</string>
    <string name="upload_image">Upload Image</string>
    <string name="or">or</string>
    <string name="shop_license">Shop License</string>
    <string name="enter_license_number">Enter License Number</string>
    <string name="bank_details">Bank Details</string>
    <string name="enter_bank_account_number">Enter Bank Account Number</string>
    <string name="enter_ifsc_code">Enter IFSC Code</string>
    <string name="click_on_it_to_upload_license_image">Click on it to upload License Image</string>
    <string name="home">Home</string>
    <string name="stats">Stats</string>
    <string name="inventory">Inventory</string>
    <string name="profile">Profile</string>
    <string name="text_spaces">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Order</string>
    <string name="active">Active</string>
    <string name="picked_up">Picked Up</string>
    <string name="completed">Completed</string>
</resources>