<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LegalDocumentsActivity"
    android:background="@color/blue_0">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/blue_10"
            android:minHeight="?attr/actionBarSize"
            >
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back"
                android:contentDescription="@string/go_to_back_screen" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp"
            android:layout_marginBottom="50dp"
            android:layout_gravity="fill_vertical">
            <TextView
                android:id="@+id/legal_documents_tv"
                style="@style/Heading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/legal_details_documents"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/gst_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gst_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/legal_documents_tv"
                style="@style/SubHeading"
                android:textStyle="bold"
                />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/gst_registered_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_your_shop_gst_registered"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gst_details_tv"

                />
            <RadioGroup
                android:id="@+id/gst_registered_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/gst_registered_tv"
                android:orientation="horizontal"
                android:weightSum="10">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_weight="5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_weight="5"/>
            </RadioGroup>
            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/five_gst_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_you_charge_5_gst_as_shop_services_on_all_clothes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gst_registered_rg"

                />
            <RadioGroup
                android:id="@+id/five_gst_rg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/five_gst_tv"
                android:orientation="horizontal"
                android:weightSum="10">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_weight="5"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:layout_weight="5"/>
            </RadioGroup>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/gst_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/five_gst_rg"
                android:background="@drawable/et_back"
                android:hint="@string/enter_gst_number"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="number"
                android:autofillHints="creditCardNumber"/>
            <TextView
                android:layout_marginTop="50dp"
                android:id="@+id/pan_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pan_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gst_number_et"
                style="@style/SubHeading"
                android:textStyle="bold"
                />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/pan_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pan_details_tv"
                android:background="@drawable/et_back"
                android:hint="@string/enter_pan_number"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="number"
                android:autofillHints="creditCardNumber"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/entity_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pan_number_et"
                android:background="@drawable/et_back"
                android:hint="@string/legal_entity_number"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="textPersonName"
                android:autofillHints="name"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/entity_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/entity_name_et"
                android:background="@drawable/et_back"
                android:hint="@string/address_legal_entity"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="textPostalAddress"
                android:autofillHints="postalAddress"/>

            <LinearLayout
                android:id="@+id/pan_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/entity_address_et"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dash_back"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/click_on_it_to_upload_license_image"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"/>
            </LinearLayout>

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/or"
                style="@style/SubHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pan_upload" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/shop_license_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shop_license"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/or"
                style="@style/SubHeading"
                android:textStyle="bold"
                />
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/license_no_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/shop_license_tv"
                android:background="@drawable/et_back"
                android:hint="@string/enter_license_number"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="text"
                android:autofillHints="creditCardNumber"/>
            <LinearLayout
                android:id="@+id/license_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/license_no_et"
                android:padding="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/dash_back"
                android:orientation="horizontal"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_image"/>
            </LinearLayout>

            <TextView
                android:layout_marginTop="50dp"
                android:id="@+id/bank_details_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/license_upload"
                style="@style/SubHeading"
                android:textStyle="bold"
                />

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/bank_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bank_details_tv"
                android:background="@drawable/et_back"
                android:hint="@string/enter_license_number"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="text"
                android:autofillHints="name"/>
            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/acc_no_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/bank_name_et"
                android:background="@drawable/et_back"
                android:hint="@string/enter_bank_account_number"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="number"
                android:autofillHints="creditCardNumber"/>

            <EditText
                android:layout_marginTop="10dp"
                android:id="@+id/ifsc_code_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/acc_no_et"
                android:background="@drawable/et_back"
                android:hint="@string/enter_ifsc_code"
                android:padding="15dp"
                android:textColor="@color/black_2"
                android:inputType="textCapCharacters"
                android:autofillHints="name"/>

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ifsc_code_et"
                android:text="@string/next"
                android:layout_marginTop="50dp"
                style="@style/PrimaryButton"
                android:background="@drawable/button_back"
                android:layout_marginBottom="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>