<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopTimingsActivity"
    android:background="@color/blue_0">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/blue_10"
            android:minHeight="?attr/actionBarSize"
            >
            <ImageView
                android:id="@+id/back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back"
                android:contentDescription="@string/go_to_back_screen" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="20dp"
            android:paddingBottom="50dp"
            android:layout_marginBottom="50dp">


            <CheckBox
                android:layout_marginTop="20dp"
                android:id="@+id/monday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monday"
                app:layout_constraintEnd_toStartOf="@+id/friday_checkbox"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mark_open_days_tv" />

            <CheckBox
                android:id="@+id/friday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/monday_checkbox"
                app:layout_constraintTop_toTopOf="@id/monday_checkbox" />
            <CheckBox

                android:id="@+id/tuesday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tuesday"
                app:layout_constraintStart_toStartOf="@id/monday_checkbox"
                app:layout_constraintTop_toBottomOf="@id/monday_checkbox" />


            <CheckBox
                android:id="@+id/saturday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday"
                app:layout_constraintStart_toStartOf="@id/friday_checkbox"
                app:layout_constraintTop_toTopOf="@id/tuesday_checkbox" />
            <CheckBox
                android:id="@+id/wednesday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wednesday"

                app:layout_constraintStart_toStartOf="@id/monday_checkbox"
                app:layout_constraintTop_toBottomOf="@id/tuesday_checkbox" />

            <CheckBox
                android:id="@+id/sunday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday"
                app:layout_constraintStart_toStartOf="@id/friday_checkbox"
                app:layout_constraintTop_toTopOf="@id/wednesday_checkbox" />
            <CheckBox
                android:id="@+id/thursday_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thursday"
                app:layout_constraintStart_toStartOf="@id/monday_checkbox"
                app:layout_constraintTop_toBottomOf="@id/wednesday_checkbox" />


            <LinearLayout
                android:id="@+id/open_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:elevation="10dp"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toStartOf="@+id/close_input_layout"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/closes_at_tv">

                <ImageView
                    android:id="@+id/open_timing_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/click_to_choose_open_timing"
                    android:src="@drawable/ic_baseline_clock_24" />

                <TextView
                    android:id="@+id/open_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:padding="15dp"
                    android:text="@string/_00_00"
                    android:textColor="@color/black_2" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/close_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/et_back"
                android:elevation="10dp"
                android:orientation="horizontal"
                android:weightSum="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/open_input_layout"
                app:layout_constraintTop_toBottomOf="@id/closes_at_tv">

                <ImageView
                    android:id="@+id/close_timing_clock"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="2"
                    android:contentDescription="@string/click_to_choose_close_timings"
                    android:src="@drawable/ic_baseline_clock_24" />

                <TextView
                    android:id="@+id/close_timing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:padding="15dp"
                    android:text="@string/_00_00"
                    android:textColor="@color/black_2" />
            </LinearLayout>

            <TextView
                android:id="@+id/shop_timings"
                style="@style/Heading2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:text="@string/shop_timings"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/shop_operation_hour_tv"
                style="@style/SubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/shop_operational_hours"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shop_timings" />

            <TextView
                android:id="@+id/mark_open_days_tv"
                style="@style/SubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/mark_open_days"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/open_input_layout" />

            <TextView
                android:id="@+id/closes_at_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/opens_at"
                app:layout_constraintEnd_toEndOf="@id/open_input_layout"
                app:layout_constraintStart_toStartOf="@id/open_input_layout"
                app:layout_constraintTop_toBottomOf="@id/shop_operation_hour_tv" />

            <TextView
                android:id="@+id/opens_at_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/closes_at"
                app:layout_constraintEnd_toEndOf="@id/close_input_layout"
                app:layout_constraintStart_toStartOf="@id/close_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/shop_operation_hour_tv" />
            <TextView
                android:id="@+id/upload_image_tv"
                style="@style/SubHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/mark_open_days"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/thursday_checkbox"
                />

            <ImageButton
                android:id="@+id/upload_image_button"
                android:layout_marginTop="20dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_baseline_photo_camera_24"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/dash_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/upload_image_tv" />

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/upload_image_button"
                android:text="@string/next"
                android:layout_marginTop="50dp"
                style="@style/PrimaryButton"
                android:background="@drawable/button_back"
                android:layout_marginBottom="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>